Now everything fails (correctly) because there are no roles/permissions.